[workspace]
members = [
    "actias-worker",
    "actias-common",
    "actias-script-service",
    "actias-cli"
]

[workspace.dependencies]
actias-common = { path = "./actias-common" }
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.23.0", features = ["full"] }
tonic = "0.8.3"
prost = "0.11.6"
tonic-build = "0.8.4"
prost-build = "0.11.6"