[workspace]
resolver = "3"

members = [
    "actias-worker",
    "actias-common",
    "actias-script-service",
    "actias-cli",
    "actias-kv",
]

[workspace.dependencies]
actias-common = { path = "./actias-common" }
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.23.0", features = ["full"] }
tonic = "0.13.0"
prost = "0.13.5"
tonic-build = "0.13.0"
prost-build = "0.13.5"
