[package]
name = "actias-kv"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.9.0"
base64 = "0.21.2"
thiserror = "1.0.47"
uuid = "1.4.1"
actias-common = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
