[package]
name = "actias-script-service"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actias-common = { workspace = true }
lz4_flex = { version = "0.9.3", default-features = false, features = [
    "checked-decode",
] }
serde_json = { version = "1", features = ["raw_value"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "uuid",
    "chrono",
] }

prost = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
