[package]
name = "actias-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actias-common = { workspace = true }
mlua = { version = "0.9.1", features = ["luau", "vendored", "serialize", "send", "async"] }
http-body-util = "0.1.0-rc.2"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.68"
futures-util = "0.3.25"
hyper-tls = "0.5.0"
hyper = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
