[package]
name = "actias-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actias-common = { workspace = true }
mlua = { version = "0.9.1", features = [
    "luau-jit",
    "vendored",
    "serialize",
    "send",
    "async",
] }
http-body-util = "0.1.0-rc.3"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.68"
futures-util = "0.3.25"
hyper-tls = "0.5.0"
hyper = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
jsonwebtoken = "9.3.1"
argon2 = "0.5.2"
sha2 = "0.10.8"
rsa = { version = "0.9.3" }

# TODO: replace jsonwebtoken
[patch.crates-io]
time = "0.3.35"

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
