[package]
name = "ephermal-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.0", features = ["derive"] }
futures = "0.3"
wax = "0.5.0"
colored = "2.0.0"
include_dir = "0.7.3"
inquire = "0.5.3"
tokio = { version = "1.24.1", features = ["full"] }
pathdiff = "0.2.1"
base64 = "0.21.0"

# HTTP client things
progenitor = { git = "https://github.com/oxidecomputer/progenitor", rev = "6eaacdf" }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
