[package]
name = "ephermal-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.8", features = ["luau", "vendored", "serialize", "send", "async"] }
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.23.0", features = ["full"] }
http-body-util = "0.1.0-rc.2"
tracing = "0.1"
tracing-subscriber = "0.3.16"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.68"
futures-util = "0.3.25"
hyper-tls = "0.5.0"